# GL_GraphicsProject_1

./: CMakeLists.txt
libs/glew/include/Glew/: glew.h
res/shaders/basic_point/: vertShader.glsl
src/: main.cpp
